eliminate dotnet4j